<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient1"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="357dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/mlRu"
                android:textAlignment="center"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="91dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/maleRu"
                    android:textAlignment="textEnd"
                    android:textSize="26sp" />

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="56dp"
                    android:layout_height="50dp"
                    android:scrollbarSize="10dp"
                    android:textColorHighlight="#534E4E"
                    android:textColorLink="#FAF6F6" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/femaleRu"
                    android:textSize="26sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/wieghtRu"
                android:textAlignment="textStart"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/WeightPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/RostRu"
                android:textAlignment="textStart"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/GrowthPoint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="numberDecimal" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="116dp"
                android:layout_marginStart="100dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#2397AC"
                android:text="@string/acceptRu"
                android:textSize="24sp"
                app:cornerRadius="150dp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="116dp"
                android:layout_marginLeft="95dp"
                android:layout_marginTop="10dp"
                android:background="#2397AC"
                android:backgroundTint="#2397AC"
                android:onClick="GetWaterForm"
                android:text="@string/drinkwaterRu"
                android:textSize="22sp"
                app:cornerRadius="100dp" />

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>